--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
             <div>
                 <section>
                     <ul>
-                        
+                        <li>
+                            <a href="index.html">
+                            Home page
+                            </a>
+                        </li>
+                        <li>
+                            <a href="news.html">
+                                News
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mb.html">
+                                More books by Sadie Grenville
+                            </a>
+                        </li>
                     </ul>
                 </section>
             </div>
