--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" src="home-page.css" / >
+        <link rel="stylesheet" href="home-page.scss"
     </head>
     <body>
         <header>
