--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <html>
     <head>
-        <link rel="stylesheet" href="home-page.scss"
+        <link rel="stylesheet" href="home-page.scss">
     </head>
-    <body>
-        <header>
-            <div>
-                <section>
-                    <ul>
-                        <li>
-                            <a href="index.html">
-                            Home page
-                            </a>
-                        </li>
-                        <li>
-                            <a href="news.html">
-                                News
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mb.html">
-                                More books by Sadie Grenville
-                            </a>
-                        </li>
-                    </ul>
-                </section>
-            </div>
-        </header>
-    </body>
+        <body>
+            <header>
+                <div>
+                    <section>
+                        <ul>
+                            <li>
+                                <a href="index.html">
+                                Home page
+                                </a>
+                            </li>
+                            <li>
+                                <a href="news.html">
+                                    News
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mb.html">
+                                    More books by Sadie Grenville
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+            </header>
+        </body>
     <script src="home-page.js" />
 </html>
